Revision history for {{$dist->name}}

{{$NEXT}}

0.100160  2010-01-16 15:39:53 America/New_York
          add configure_requires needed to build!

0.100080  2010-01-08 07:41:51 America/New_York
          require File::Path 2.07 (thanks, ANDK)

0.100010  2010-01-01 18:29:55 America/New_York

0.093580  2009-12-24 21:24:48 America/New_York
          first release!