@@ -3,9 +3,10 @@ author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
-[Prereq]
+[Prereqs]
 autodie = 0
 Calendar::Simple = 0
+Config::MVP = 2 ; new Reader API
 DateTime::Format::W3CDTF = 0
 DateTime = 0
 Email::Simple = 0
